[package]
name = "ui-theme"
version = "0.1.0"
edition = "2021"
description = "SkyScope egui design system — dark theme with glassmorphism support"

[dependencies]
egui = "0.34"
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
eframe = "0.34"
env_logger = "0.11"

[features]
default = []
serde = ["dep:serde"]

[[example]]
name = "demo"
