[package]
name = "ui-theme"
version = "0.1.0"
edition = "2021"
description = "Frost Night egui design system — dark theme with glassmorphism support"

[dependencies]
egui = "0.34"
egui_flex = "0.6"
eframe = { version = "0.34", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
eframe = "0.34"
env_logger = "0.11"

[features]
default = []
demo = ["dep:eframe"]
serde = ["dep:serde"]

[[example]]
name = "demo"
required-features = ["demo"]

[[example]]
name = "export_css"
