[package]
name = "web-demo"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
ui-theme = { path = "../ui-theme" }
eframe = { version = "0.34", default-features = false, features = [
    "default_fonts",
    "glow",
] }
log = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "HtmlCanvasElement", "Element"] }
